# template-cpp

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Ci.yml
include/: add.hpp  test.hpp
src/: add.cpp  main.cpp  test.cpp
test/: add_test.cpp
uts/: test_tests.cpp
